fix content, add scroll when overflow

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -64,7 +64,7 @@ nav{
 	min-height: 800px;
 }
 .post-area{
-	
+
 	background-color:#f8f8fd;
 	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.4),0 0 30px rgba(10,10,0,0.1) inset;
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.4),0 0 30px rgba(10,10,0,0.1) inset;
@@ -79,10 +79,10 @@ nav{
 }
 .post-list-item{
 	display: block;
-	padding:8px 30px 10px 30px; 
+	padding:8px 30px 10px 30px;
 	border-bottom:1px solid #ddd;
 
-	transition:0.4s ease; 
+	transition:0.4s ease;
 	-webkit-transition:0.4s ease;
 	-moz-transition:0.4s ease;
 	-o-transition:0.4s ease;
@@ -98,7 +98,7 @@ nav{
 
 .post-list-item:hover{
 	background-color: rgba(0,0,6,0.05);
-	
+
 }
 
 .paginator{
@@ -126,8 +126,8 @@ nav{
 }
 .categories-list-item{
 	display: block;
-	padding:8px 15px; 
-	border-bottom:1px solid #ddd; 
+	padding:8px 15px;
+	border-bottom:1px solid #ddd;
 
 	transition:0.4s ease;
 	-webkit-transition:0.4s ease;
@@ -135,7 +135,7 @@ nav{
 	-o-transition:0.4s ease;
 }
 .categories-list-item:last-of-type{
-	border-bottom:none; 
+	border-bottom:none;
 }
 .categories-list-item:hover{
 	background-color: rgba(0,0,10,0.075);
@@ -164,9 +164,9 @@ nav{
 
 /* shadow */
 .shadow-corner-curl{
-	
+
 	position: relative;
-	background-color:#f8f8fd; 
+	background-color:#f8f8fd;
 	-webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
 	-moz-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
 	-o-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
@@ -309,9 +309,9 @@ blockquote:last-child {
 	width:0;
 	height: 0;
 	border-right: 15px solid transparent;
-	border-left: 15px solid transparent; 
+	border-left: 15px solid transparent;
 	border-bottom: 15px solid #7f7f7f;
-	
+
 }
 #top .stick{
 	margin:0 auto;
@@ -336,7 +336,7 @@ blockquote:last-child {
 }
 .page-content table tr td:first-of-type{
 	padding: 6px 10px 6px 10px;
-	border-right: 1px dashed #ddd; 
+	border-right: 1px dashed #ddd;
 	text-align: right;
 }
 
@@ -361,10 +361,10 @@ blockquote:last-child {
 	vertical-align: top;
 	/*float: left;*/
 
-	
+
 }
 
-@media screen and (max-width: 1200px) { 
+@media screen and (max-width: 1200px) {
 	#fall ul{
 		width: 210px;
 	}
@@ -385,7 +385,7 @@ blockquote:last-child {
 	-o-box-shadow: 0 0 5px rgba(0,0,0,0.6),0 0 20px rgba(0,0,0,0.1) inset;
 	box-shadow: 0 0 5px rgba(0,0,0,0.6),0 0 20px rgba(0,0,0,0.1) inset;
 
-	transition:0.1s ease-out; 
+	transition:0.1s ease-out;
 	-webkit-transition:0.1s ease-out;
 	-moz-transition:0.1s ease-out;
 	-o-transition:0.1s ease-out;
@@ -432,6 +432,10 @@ blockquote:last-child {
 	}
 }
 
+#content .content-text{
+	overflow: auto;
+}
+
 #content a:link {color: #666}		/* 未访问的链接 */
 #content a:visited {color: #666}	/* 已访问的链接 */
 #content a:hover {color: #336;text-decoration: none;}	/* 鼠标移动到链接上 */
@@ -441,7 +445,7 @@ blockquote:last-child {
 	max-width: 292px;
 }
 #content .content-text{
-	padding: 10px 0; 
+	padding: 10px 0;
 }
 #content ul{
 	padding-left: 30px;
@@ -452,7 +456,7 @@ blockquote:last-child {
 	line-height: 25px;
 }
 .shadow-bottom-center{
-	background-color:#f8f8fd; 
+	background-color:#f8f8fd;
 	-webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
 	-moz-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
 	-o-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
@@ -482,5 +486,3 @@ blockquote:last-child {
 		padding-left: 25px;
 	}
 }
-
-
